# Augmented-Reality

./: .gitignore  CMakeLists.txt  Marker_Tracking.h  Player.h  Projektplannung.txt  UI_Manager.cpp  UI_Manager.h
Franzi/Ex4/: Exercise_4.cpp
Janik/: Exercise_5.cpp  PoseEstimation.cpp
Max/: CMakeLists.txt  Db_Api.cpp  Db_Api.h  Player.cpp  Player.h  Player_Manager.cpp  Player_Manager.h  Question.cpp  Question.h  main.cpp
headers/: Area.h  Db_Api.h  DrawPrimitives.h  Draw_Primitives.h  Marker_Tracking.h  Player.h  Player_Manager.h  Question.h  UI_Manager.h
src/: Db_Api.cpp  Main.cpp  MarkerTracking.cpp  Marker_Tracking.cpp  Player.cpp  Player.h  Player_Manager.cpp  Pose_Estimation.cpp  Question.cpp  Question.h  UI_Manager.cpp
